# pycon25-tutorial

./: README.md
assets/: pip.afphoto  pypi.afphoto
pdm/code/packaging-tutorial/: README.md  pyproject.toml
pdm/code/packaging-tutorial/.github/workflows/: publish.yml
pdm/code/packaging-tutorial/src/packaging_tutorial/: pycon.py  validated_pycon_with_config.py
pdm/code/packaging-tutorial/tests/: test_packaging_tutorial.py
pdm/tutorial/01-introduction/: 01-workshop-introduction.md  02-pip-internals.md  03-our-first-package.md  04-dependencies.md  05-virtual-environments.md  0x-bonus-scripts.md
pdm/tutorial/02-more-about-dependencies/: 06-unit-tests.md  07-package-extras.md  08-dev-dependencies.md  09-static-code-checkers.md  10-lock-files.md
pdm/tutorial/03-building-and-publishing-packages/: 11-building-wheels.md  12-publishing-packages.md
pdm/tutorial/04-managing-your-code/: 13-using-git.md  14-pre-commit.md  15-using-github.md  16-github-workflows.md  17-publishing-with-github.md  18-summary.md
uv/code/packaging-tutorial/: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
uv/code/packaging-tutorial/.github/workflows/: publish.yml
uv/code/packaging-tutorial/scripts/: get_charlas.py
uv/code/packaging-tutorial/src/packaging_tutorial/: validated_pycon.py
uv/tutorial/01-introduction/: 02-pip-internals.md  03-our-first-package.md  04-dependencies.md  05-virtual-environments.md  0x-bonus-scripts.md
uv/tutorial/02-more-about-dependencies/: 06-unit-tests.md  07-package-extras.md  08-dev-dependencies.md  09-static-code-checkers.md  (+1 more)
(+8 files in other folders)
