[project]
name = "packaging-tutorial"
description = ""
authors = [
    {name = "Yngve Mardal Moe"},
    {name = "Marie Roald"},
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
dynamic = ["version"]

[project.optional-dependencies]
rich = [
    # "rich>=14.0.0",
]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[dependency-groups]
dev = [
    # "ruff>=0.11.5",
    # "pytest>=8.3.5",
    # "pyright>=1.1.399",
    "pytest>=8.3.5",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["I"]

[tool.setuptools_scm]
root = "../../.."
